# OpenViking

./: .dockerignore  .env.example  .envrc  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.example.yml  docker-compose.standalone.yml  docker-compose.yml  docker-entrypoint.sh  flake.nix  instances.json  mcp-server.py  nginx.conf  openviking-mcp-wrapper  ov-manager  ov-personal.conf  ov-work.conf  ov.conf  ov.container.conf  pyproject.toml
.github/workflows/: build-image.yml
