[project]
name = "openviking"
version = "0.1.0"
description = "Context database for AI agents with semantic search, tiered summaries, and MCP server integration"
license = "Apache-2.0"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = [
    "openviking>=0.3.9",
    "fastmcp>=3.2.0",
    "uvicorn>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/openviking/openviking"
